--- a/locales/fr_FR.json
+++ b/locales/fr_FR.json
@@ -1,16 +1,13 @@
 {
-	"error": {	
+	"error": {
 		"missingTranslation": "Une erreur de traduction est servenue !",
 		"errorOccured": "Une erreur inconnu est survenue\n```{{error}}```",
 		"unknowCommand": "Cette commande est introuvable",
-		
 		"invalidOpponent": "L'adversaire saisi est invalide !"
 	},
-
 	"global": {
 		"yes": "Oui",
 		"no": "Non",
-
 		"opponentReady": "{{username}} êtes-vous prêt(e) ?",
 		"opponentNotReady": "{{username}} n'est pas prêt(e)",
 		"playWithBot": "Vous n'avez pas saisi d'adversaire voulez vous jouer contre moi ?",
@@ -18,7 +15,6 @@
 		"notYourGame": "Désolé mais ce n'est pas votre partie ou votre tour, pour lancer une partie faites /{{gameName}}",
 		"notYourTurn": "Désole ce n'est pas encore a vous de jouer",
 		"gameOf": "Partie de : ",
-
 		"whoStart": "{{username}}, Qui doit commencer ?",
 		"start": {
 			"you": "Vous {{username}}",
@@ -26,92 +22,444 @@
 			"random": "Aléatoire"
 		}
 	},
-
 	"rockpaperscissors": {
 		"mainText": "C'est le moment des choix ! (Attention après vous ne pouvez pas changé)\n\n{{userUsername}} {{userChoice}}\n{{opponentUsername}} {{opponentChoice}}",
-	
 		"sign": {
 			"paper": "Feuille",
 			"rock": "Pierre",
 			"scissors": "Ciseaux"
 		},
-
 		"result": {
 			"win": "**{{winnerUsername}}** contre **{{looserUsername}}**\nRésultat : **{{winnerUsername}}** a gagné avec __{{winnerChoice}}__ ! (**{{looserUsername}}** a fait __{{looserChoice}}__)",
-			"equality":  "**{{userUsername}}** contre **{{opponentUsername}}**\nRésultat : Egalité ! (Ils ont tout les deux fait __{{opponentChoice}}__)"
+			"equality": "**{{userUsername}}** contre **{{opponentUsername}}**\nRésultat : Egalité ! (Ils ont tout les deux fait __{{opponentChoice}}__)"
 		}
 	},
-
 	"memory": {
 		"remember": "Partie de : {{username}}\nVous avez {{seconds}} secondes pour tout retenir...",
 		"clickNumber": "Partie de : {{username}}\nVous avez {{clickNumber}} cliques",
-		
 		"win": "Bien joué {{username}} tu as gagner ! :tada:",
 		"loose": "Désolé {{username}} vous avez perdue !"
 	},
-
 	"morpion": {
 		"turn": "Tour de : {{username}} ({{emoji}})",
-
 		"result": {
 			"win": "Wow bien joué a {{winnerUsername}} ({{winnerEmoji}}) il a gagné !",
 			"equality": "Wow égalité bien joué a vous deux {{userUsername}} et {{opponentUsername}}"
 		}
 	},
 	"hangman": {
-		"wordList": [ "bonjour", "aurevoir", "koala", "bleu", "super", "autre", "bizarre", "difficile", "drole", "etrange", "facile", "grave", "impossible", "jeune", "juste", "libre", "malade", "meme", "pauvre", "possible", "propre", "rouge", "sale", "simple", "tranquille", "triste", "vide", "bonne", "toute", "doux", "faux", "francais", "gros", "heureux", "mauvais", "serieux", "vieux", "vrai", "ancien", "beau", "blanc", "certain", "chaud", "cher", "clair", "content", "dernier", "desole", "different", "droit", "entier", "fort", "froid", "gentil", "grand", "haut", "humain", "important", "joli", "leger", "long", "meilleur", "mort", "noir", "nouveau", "pareil", "petit", "plein", "premier", "pret", "prochain", "quoi", "seul", "tout", "vert", "vivant", "aide", "chef", "enfant", "garde", "gauche", "geste", "gosse", "livre", "merci", "mort", "ombre", "part", "poche", "professeur", "tour", "fois", "madame", "paix", "voix", "affaire", "annee", "arme", "armee", "attention", "balle", "boite", "bouche", "carte", "cause", "chambre", "chance", "chose", "classe", "confiance", "couleur", "cour", "cuisine", "dame", "dent", "droite", "ecole", "eglise", "envie", "epaule", "epoque", "equipe", "erreur", "espece", "face", "facon", "faim", "famille", "faute", "femme", "fenetre", "fete", "fille", "fleur", "force", "forme", "guerre", "gueule", "habitude", "heure", "histoire", "idee", "image", "impression", "jambe", "joie", "journee", "langue", "lettre", "levre", "ligne", "lumiere", "main", "maison", "maman", "maniere", "marche", "mere", "minute", "musique", "nuit", "odeur", "oreille", "parole", "partie", "peau", "peine", "pensee", "personne", "peur", "photo", "piece", "pierre", "place", "police", "porte", "presence", "prison", "question", "raison", "reponse", "robe", "route", "salle", "scene", "seconde", "securite", "semaine", "situation", "soeur", "soiree", "sorte", "suite", "table", "terre", "tete", "verite", "ville", "voiture", "avis", "bois", "bras", "choix", "corps", "cours", "gars", "mois", "pays", "prix", "propos", "sens", "temps", "travers", "vieux", "accord", "agent", "amour", "appel", "arbre", "argent", "avenir", "avion", "bateau", "bebe", "besoin", "bonheur", "bord", "boulot", "bout", "bruit", "bureau", "cafe", "camp", "capitaine", "chat", "chemin", "cheri", "cheval", "cheveu", "chien", "ciel", "client", "coeur", "coin", "colonel", "compte", "copain", "cote", "coup", "courant", "debut", "depart", "dieu", "docteur", "doigt", "dollar", "doute", "droit", "effet", "endroit", "ennemi", "escalier", "esprit", "etat", "etre", "exemple", "fait", "film", "flic", "fond", "francais", "frere", "front", "garcon", "general", "genre", "gout", "gouvernement", "grand", "groupe", "haut", "homme", "honneur", "hotel", "instant", "interet", "interieur", "jardin", "jour", "journal", "lieu", "long", "maitre", "mari", "mariage", "matin", "medecin", "metre", "milieu", "million", "moment", "monde", "monsieur", "mouvement", "moyen", "noir", "nouveau", "numero", "oeil", "oiseau", "oncle", "ordre", "papa", "papier", "parent", "passage", "passe", "patron", "pere", "petit", "peuple", "pied", "plaisir", "plan", "point", "pouvoir", "premier", "present", "president", "prince", "probleme", "quartier", "rapport", "regard", "reste", "retard", "retour", "reve", "revoir", "salut", "sang", "secret", "seigneur", "sentiment", "service", "seul", "siecle", "signe", "silence", "soir", "soldat", "soleil", "sourire", "souvenir", "sujet", "telephone", "tout", "train", "travail", "trou", "truc", "type", "vent", "ventre", "verre", "village", "visage", "voyage", "fils", "gens" ],
-
+		"wordList": [
+			"bonjour",
+			"aurevoir",
+			"koala",
+			"bleu",
+			"super",
+			"autre",
+			"bizarre",
+			"difficile",
+			"drole",
+			"etrange",
+			"facile",
+			"grave",
+			"impossible",
+			"jeune",
+			"juste",
+			"libre",
+			"malade",
+			"meme",
+			"pauvre",
+			"possible",
+			"propre",
+			"rouge",
+			"sale",
+			"simple",
+			"tranquille",
+			"triste",
+			"vide",
+			"bonne",
+			"toute",
+			"doux",
+			"faux",
+			"francais",
+			"gros",
+			"heureux",
+			"mauvais",
+			"serieux",
+			"vieux",
+			"vrai",
+			"ancien",
+			"beau",
+			"blanc",
+			"certain",
+			"chaud",
+			"cher",
+			"clair",
+			"content",
+			"dernier",
+			"desole",
+			"different",
+			"droit",
+			"entier",
+			"fort",
+			"froid",
+			"gentil",
+			"grand",
+			"haut",
+			"humain",
+			"important",
+			"joli",
+			"leger",
+			"long",
+			"meilleur",
+			"mort",
+			"noir",
+			"nouveau",
+			"pareil",
+			"petit",
+			"plein",
+			"premier",
+			"pret",
+			"prochain",
+			"quoi",
+			"seul",
+			"tout",
+			"vert",
+			"vivant",
+			"aide",
+			"chef",
+			"enfant",
+			"garde",
+			"gauche",
+			"geste",
+			"gosse",
+			"livre",
+			"merci",
+			"mort",
+			"ombre",
+			"part",
+			"poche",
+			"professeur",
+			"tour",
+			"fois",
+			"madame",
+			"paix",
+			"voix",
+			"affaire",
+			"annee",
+			"arme",
+			"armee",
+			"attention",
+			"balle",
+			"boite",
+			"bouche",
+			"carte",
+			"cause",
+			"chambre",
+			"chance",
+			"chose",
+			"classe",
+			"confiance",
+			"couleur",
+			"cour",
+			"cuisine",
+			"dame",
+			"dent",
+			"droite",
+			"ecole",
+			"eglise",
+			"envie",
+			"epaule",
+			"epoque",
+			"equipe",
+			"erreur",
+			"espece",
+			"face",
+			"facon",
+			"faim",
+			"famille",
+			"faute",
+			"femme",
+			"fenetre",
+			"fete",
+			"fille",
+			"fleur",
+			"force",
+			"forme",
+			"guerre",
+			"gueule",
+			"habitude",
+			"heure",
+			"histoire",
+			"idee",
+			"image",
+			"impression",
+			"jambe",
+			"joie",
+			"journee",
+			"langue",
+			"lettre",
+			"levre",
+			"ligne",
+			"lumiere",
+			"main",
+			"maison",
+			"maman",
+			"maniere",
+			"marche",
+			"mere",
+			"minute",
+			"musique",
+			"nuit",
+			"odeur",
+			"oreille",
+			"parole",
+			"partie",
+			"peau",
+			"peine",
+			"pensee",
+			"personne",
+			"peur",
+			"photo",
+			"piece",
+			"pierre",
+			"place",
+			"police",
+			"porte",
+			"presence",
+			"prison",
+			"question",
+			"raison",
+			"reponse",
+			"robe",
+			"route",
+			"salle",
+			"scene",
+			"seconde",
+			"securite",
+			"semaine",
+			"situation",
+			"soeur",
+			"soiree",
+			"sorte",
+			"suite",
+			"table",
+			"terre",
+			"tete",
+			"verite",
+			"ville",
+			"voiture",
+			"avis",
+			"bois",
+			"bras",
+			"choix",
+			"corps",
+			"cours",
+			"gars",
+			"mois",
+			"pays",
+			"prix",
+			"propos",
+			"sens",
+			"temps",
+			"travers",
+			"vieux",
+			"accord",
+			"agent",
+			"amour",
+			"appel",
+			"arbre",
+			"argent",
+			"avenir",
+			"avion",
+			"bateau",
+			"bebe",
+			"besoin",
+			"bonheur",
+			"bord",
+			"boulot",
+			"bout",
+			"bruit",
+			"bureau",
+			"cafe",
+			"camp",
+			"capitaine",
+			"chat",
+			"chemin",
+			"cheri",
+			"cheval",
+			"cheveu",
+			"chien",
+			"ciel",
+			"client",
+			"coeur",
+			"coin",
+			"colonel",
+			"compte",
+			"copain",
+			"cote",
+			"coup",
+			"courant",
+			"debut",
+			"depart",
+			"dieu",
+			"docteur",
+			"doigt",
+			"dollar",
+			"doute",
+			"droit",
+			"effet",
+			"endroit",
+			"ennemi",
+			"escalier",
+			"esprit",
+			"etat",
+			"etre",
+			"exemple",
+			"fait",
+			"film",
+			"flic",
+			"fond",
+			"francais",
+			"frere",
+			"front",
+			"garcon",
+			"general",
+			"genre",
+			"gout",
+			"gouvernement",
+			"grand",
+			"groupe",
+			"haut",
+			"homme",
+			"honneur",
+			"hotel",
+			"instant",
+			"interet",
+			"interieur",
+			"jardin",
+			"jour",
+			"journal",
+			"lieu",
+			"long",
+			"maitre",
+			"mari",
+			"mariage",
+			"matin",
+			"medecin",
+			"metre",
+			"milieu",
+			"million",
+			"moment",
+			"monde",
+			"monsieur",
+			"mouvement",
+			"moyen",
+			"noir",
+			"nouveau",
+			"numero",
+			"oeil",
+			"oiseau",
+			"oncle",
+			"ordre",
+			"papa",
+			"papier",
+			"parent",
+			"passage",
+			"passe",
+			"patron",
+			"pere",
+			"petit",
+			"peuple",
+			"pied",
+			"plaisir",
+			"plan",
+			"point",
+			"pouvoir",
+			"premier",
+			"present",
+			"president",
+			"prince",
+			"probleme",
+			"quartier",
+			"rapport",
+			"regard",
+			"reste",
+			"retard",
+			"retour",
+			"reve",
+			"revoir",
+			"salut",
+			"sang",
+			"secret",
+			"seigneur",
+			"sentiment",
+			"service",
+			"seul",
+			"siecle",
+			"signe",
+			"silence",
+			"soir",
+			"soldat",
+			"soleil",
+			"sourire",
+			"souvenir",
+			"sujet",
+			"telephone",
+			"tout",
+			"train",
+			"travail",
+			"trou",
+			"truc",
+			"type",
+			"vent",
+			"ventre",
+			"verre",
+			"village",
+			"visage",
+			"voyage",
+			"fils",
+			"gens"
+		],
 		"error": {
 			"noWordFound": "Une erruer est survenue aucun mot n'a été trouver",
 			"onlyLetters": "Uniquement les lettres sont acceptés",
 			"alreadySaid": "Vous avez deja dit cette lettre"
 		},
-	
 		"gameStop": "a arreter la partie, le mot était :",
 		"gameReady": "Votre partie est prête, pour arreter celle-ci vous pouvez dire `stop`, le mot qu'on cherche n'a pas d'accent !\nBon courage !",
 		"word": "Mot :",
 		"lettersSaid": "Lettre(s) deja dites",
 		"noLetter": "aucune lettre",
-
 		"result": {
 			"win": {
 				"perfect": "Parfait ! {{username}} a trouver sans aucune erreur !",
 				"normal": "Bravo {{username}} a gagner !",
 				"word": "Le mot :"
-
 			},
 			"loose": "Oh non {{username}} a perdu\nLe mot était :"
 		}
-
 	},
 	"puissance4": {
 		"goingToStart": "va commencer",
 		"settingUp": "Veuillez patienter quelque seconde, le temps de la mise en place des réactions",
-
 		"choice": "Choix",
 		"random": "Aléatoire",
-
 		"revange": "Revanche n°",
 		"turnOf": "Tour de :",
-
 		"error": {
 			"cantPlayHere": "Vous ne pouvez pas jouer ici",
 			"unknownError": "Erreur inconnu : "
 		},
-		
 		"win": {
 			"wellPlay": "Wow bien joué",
 			"wonOver": "qui a gagné contre"
 		},
-
 		"equality": {
 			"and": "et",
 			"equality": "finissent sur une égalité :("
 		},
-
 		"wantRevange": "{{username}} veux une revanche ({{number}}/2)",
 		"noMoreRevange": "{{username}} ne veut plus de revanche",
-	
 		"replay": {
 			"mainText": "Génération du replay veuillez patientez... Ceci peut prendre quelques minutes",
 			"step": "Etape :",
@@ -121,5 +469,6 @@
 			"gameReplay": "Replay de la partie :"
 		}
 	},
-	"uno": {}
+	"uno": {},
+	"whoStart": "Une erreur de traduction est servenue !"
 }
