--- a/locales/fr_FR.json
+++ b/locales/fr_FR.json
@@ -54,376 +54,376 @@
 		},
 		"hangman": {
 			"wordList": [
-				"bonjour",
-				"aurevoir",
-				"koala",
 				"bleu",
-				"super",
-				"autre",
-				"bizarre",
-				"difficile",
-				"drole",
-				"etrange",
-				"facile",
-				"grave",
-				"impossible",
-				"jeune",
-				"juste",
-				"libre",
-				"malade",
 				"meme",
-				"pauvre",
-				"possible",
-				"propre",
-				"rouge",
 				"sale",
-				"simple",
-				"tranquille",
-				"triste",
 				"vide",
-				"bonne",
-				"toute",
 				"doux",
 				"faux",
-				"francais",
 				"gros",
-				"heureux",
-				"mauvais",
-				"serieux",
-				"vieux",
 				"vrai",
-				"ancien",
 				"beau",
-				"blanc",
-				"certain",
-				"chaud",
 				"cher",
-				"clair",
-				"content",
-				"dernier",
-				"desole",
-				"different",
-				"droit",
-				"entier",
 				"fort",
-				"froid",
-				"gentil",
-				"grand",
 				"haut",
-				"humain",
-				"important",
 				"joli",
-				"leger",
 				"long",
-				"meilleur",
 				"mort",
 				"noir",
-				"nouveau",
-				"pareil",
-				"petit",
-				"plein",
-				"premier",
 				"pret",
-				"prochain",
 				"quoi",
 				"seul",
 				"tout",
 				"vert",
-				"vivant",
 				"aide",
 				"chef",
-				"enfant",
+				"mort",
+				"part",
+				"tour",
+				"fois",
+				"paix",
+				"voix",
+				"arme",
+				"cour",
+				"dame",
+				"dent",
+				"face",
+				"faim",
+				"fete",
+				"idee",
+				"joie",
+				"main",
+				"mere",
+				"nuit",
+				"peau",
+				"peur",
+				"robe",
+				"tete",
+				"avis",
+				"bois",
+				"bras",
+				"gars",
+				"mois",
+				"pays",
+				"prix",
+				"sens",
+				"bebe",
+				"bord",
+				"bout",
+				"cafe",
+				"camp",
+				"chat",
+				"ciel",
+				"coin",
+				"cote",
+				"coup",
+				"dieu",
+				"etat",
+				"etre",
+				"fait",
+				"film",
+				"flic",
+				"fond",
+				"gout",
+				"haut",
+				"jour",
+				"lieu",
+				"long",
+				"mari",
+				"noir",
+				"oeil",
+				"papa",
+				"pere",
+				"pied",
+				"plan",
+				"reve",
+				"sang",
+				"seul",
+				"soir",
+				"tout",
+				"trou",
+				"truc",
+				"type",
+				"vent",
+				"fils",
+				"gens",
+				"koala",
+				"super",
+				"autre",
+				"drole",
+				"grave",
+				"jeune",
+				"juste",
+				"libre",
+				"rouge",
+				"bonne",
+				"toute",
+				"vieux",
+				"blanc",
+				"chaud",
+				"clair",
+				"droit",
+				"froid",
+				"grand",
+				"leger",
+				"petit",
+				"plein",
 				"garde",
-				"gauche",
 				"geste",
 				"gosse",
 				"livre",
 				"merci",
-				"mort",
 				"ombre",
-				"part",
 				"poche",
-				"professeur",
-				"tour",
-				"fois",
-				"madame",
-				"paix",
-				"voix",
-				"affaire",
 				"annee",
-				"arme",
 				"armee",
-				"attention",
 				"balle",
 				"boite",
-				"bouche",
 				"carte",
 				"cause",
-				"chambre",
-				"chance",
 				"chose",
-				"classe",
-				"confiance",
-				"couleur",
-				"cour",
-				"cuisine",
-				"dame",
-				"dent",
-				"droite",
 				"ecole",
-				"eglise",
 				"envie",
+				"facon",
+				"faute",
+				"femme",
+				"fille",
+				"fleur",
+				"force",
+				"forme",
+				"heure",
+				"image",
+				"jambe",
+				"levre",
+				"ligne",
+				"maman",
+				"odeur",
+				"peine",
+				"photo",
+				"piece",
+				"place",
+				"porte",
+				"route",
+				"salle",
+				"scene",
+				"soeur",
+				"sorte",
+				"suite",
+				"table",
+				"terre",
+				"ville",
+				"choix",
+				"corps",
+				"cours",
+				"temps",
+				"vieux",
+				"agent",
+				"amour",
+				"appel",
+				"arbre",
+				"avion",
+				"bruit",
+				"cheri",
+				"chien",
+				"coeur",
+				"debut",
+				"doigt",
+				"doute",
+				"droit",
+				"effet",
+				"frere",
+				"front",
+				"genre",
+				"grand",
+				"homme",
+				"hotel",
+				"matin",
+				"metre",
+				"monde",
+				"moyen",
+				"oncle",
+				"ordre",
+				"passe",
+				"petit",
+				"point",
+				"reste",
+				"salut",
+				"signe",
+				"sujet",
+				"train",
+				"verre",
+				"facile",
+				"malade",
+				"pauvre",
+				"propre",
+				"simple",
+				"triste",
+				"ancien",
+				"desole",
+				"entier",
+				"gentil",
+				"humain",
+				"pareil",
+				"vivant",
+				"enfant",
+				"gauche",
+				"madame",
+				"bouche",
+				"chance",
+				"classe",
+				"droite",
+				"eglise",
 				"epaule",
 				"epoque",
 				"equipe",
 				"erreur",
 				"espece",
-				"face",
-				"facon",
-				"faim",
-				"famille",
-				"faute",
-				"femme",
-				"fenetre",
-				"fete",
-				"fille",
-				"fleur",
-				"force",
-				"forme",
 				"guerre",
 				"gueule",
-				"habitude",
-				"heure",
-				"histoire",
-				"idee",
-				"image",
-				"impression",
-				"jambe",
-				"joie",
-				"journee",
 				"langue",
 				"lettre",
-				"levre",
-				"ligne",
-				"lumiere",
-				"main",
 				"maison",
-				"maman",
-				"maniere",
 				"marche",
-				"mere",
 				"minute",
-				"musique",
-				"nuit",
-				"odeur",
-				"oreille",
 				"parole",
 				"partie",
-				"peau",
-				"peine",
 				"pensee",
-				"personne",
-				"peur",
-				"photo",
-				"piece",
 				"pierre",
-				"place",
 				"police",
-				"porte",
-				"presence",
 				"prison",
-				"question",
 				"raison",
-				"reponse",
-				"robe",
-				"route",
-				"salle",
-				"scene",
-				"seconde",
-				"securite",
-				"semaine",
-				"situation",
-				"soeur",
 				"soiree",
-				"sorte",
-				"suite",
-				"table",
-				"terre",
-				"tete",
 				"verite",
-				"ville",
-				"voiture",
-				"avis",
-				"bois",
-				"bras",
-				"choix",
-				"corps",
-				"cours",
-				"gars",
-				"mois",
-				"pays",
-				"prix",
 				"propos",
-				"sens",
-				"temps",
-				"travers",
-				"vieux",
 				"accord",
-				"agent",
-				"amour",
-				"appel",
-				"arbre",
 				"argent",
 				"avenir",
-				"avion",
 				"bateau",
-				"bebe",
 				"besoin",
-				"bonheur",
-				"bord",
 				"boulot",
-				"bout",
-				"bruit",
 				"bureau",
-				"cafe",
-				"camp",
-				"capitaine",
-				"chat",
 				"chemin",
-				"cheri",
 				"cheval",
 				"cheveu",
-				"chien",
-				"ciel",
 				"client",
-				"coeur",
-				"coin",
-				"colonel",
 				"compte",
 				"copain",
-				"cote",
-				"coup",
-				"courant",
-				"debut",
 				"depart",
-				"dieu",
-				"docteur",
-				"doigt",
 				"dollar",
-				"doute",
-				"droit",
-				"effet",
-				"endroit",
 				"ennemi",
-				"escalier",
 				"esprit",
-				"etat",
-				"etre",
-				"exemple",
-				"fait",
-				"film",
-				"flic",
-				"fond",
-				"francais",
-				"frere",
-				"front",
 				"garcon",
-				"general",
-				"genre",
-				"gout",
-				"gouvernement",
-				"grand",
 				"groupe",
-				"haut",
-				"homme",
-				"honneur",
-				"hotel",
-				"instant",
-				"interet",
-				"interieur",
 				"jardin",
-				"jour",
-				"journal",
-				"lieu",
-				"long",
 				"maitre",
-				"mari",
-				"mariage",
-				"matin",
-				"medecin",
-				"metre",
 				"milieu",
-				"million",
 				"moment",
-				"monde",
-				"monsieur",
-				"mouvement",
-				"moyen",
-				"noir",
-				"nouveau",
 				"numero",
-				"oeil",
 				"oiseau",
-				"oncle",
-				"ordre",
-				"papa",
 				"papier",
 				"parent",
-				"passage",
-				"passe",
 				"patron",
-				"pere",
-				"petit",
 				"peuple",
-				"pied",
+				"prince",
+				"regard",
+				"retard",
+				"retour",
+				"revoir",
+				"secret",
+				"siecle",
+				"soldat",
+				"soleil",
+				"ventre",
+				"visage",
+				"voyage",
+				"bonjour",
+				"bizarre",
+				"etrange",
+				"heureux",
+				"mauvais",
+				"serieux",
+				"certain",
+				"content",
+				"dernier",
+				"nouveau",
+				"premier",
+				"affaire",
+				"chambre",
+				"couleur",
+				"cuisine",
+				"famille",
+				"fenetre",
+				"journee",
+				"lumiere",
+				"maniere",
+				"musique",
+				"oreille",
+				"reponse",
+				"seconde",
+				"semaine",
+				"voiture",
+				"travers",
+				"bonheur",
+				"colonel",
+				"courant",
+				"docteur",
+				"endroit",
+				"exemple",
+				"general",
+				"honneur",
+				"instant",
+				"interet",
+				"journal",
+				"mariage",
+				"medecin",
+				"million",
+				"nouveau",
+				"passage",
 				"plaisir",
-				"plan",
-				"point",
 				"pouvoir",
 				"premier",
 				"present",
-				"president",
-				"prince",
+				"rapport",
+				"service",
+				"silence",
+				"sourire",
+				"travail",
+				"village",
+				"aurevoir",
+				"possible",
+				"francais",
+				"meilleur",
+				"prochain",
+				"habitude",
+				"histoire",
+				"personne",
+				"presence",
+				"question",
+				"securite",
+				"escalier",
+				"francais",
+				"monsieur",
 				"probleme",
 				"quartier",
-				"rapport",
-				"regard",
-				"reste",
-				"retard",
-				"retour",
-				"reve",
-				"revoir",
-				"salut",
-				"sang",
-				"secret",
 				"seigneur",
-				"sentiment",
-				"service",
-				"seul",
-				"siecle",
-				"signe",
-				"silence",
-				"soir",
-				"soldat",
-				"soleil",
-				"sourire",
 				"souvenir",
-				"sujet",
+				"difficile",
+				"different",
+				"important",
+				"attention",
+				"confiance",
+				"situation",
+				"capitaine",
+				"interieur",
+				"mouvement",
+				"president",
+				"sentiment",
 				"telephone",
-				"tout",
-				"train",
-				"travail",
-				"trou",
-				"truc",
-				"type",
-				"vent",
-				"ventre",
-				"verre",
-				"village",
-				"visage",
-				"voyage",
-				"fils",
-				"gens"
+				"impossible",
+				"tranquille",
+				"professeur",
+				"impression",
+				"gouvernement"
 			],
 			"error": {
 				"noWordFound": "Une erruer est survenue aucun mot n'a été trouvé",
